<resources>
    <string name="app_name">American Room</string>
    <string name="top">Top</string>
    <string name="explore">Explore</string>
    <string name="favorite">Favorite</string>
    <string name="news">New</string>
    <string name="pick_a_state">Pick a state</string>
    <string name="text_title_suggesstion">May Be You Like This</string>
    <string name="cities">Cities</string>
    <string name="reviews">reviews</string>
    <string name="display_location">Display Location</string>
    <string name="location">Location</string>
    <string name="related">Related</string>
    <string name="bath">Bath</string>
    <string name="bed">Bed</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="person">Person</string>
    <string name="description">Description</string>
    <string name="reviews_count">(%d reviews)</string>
    <string name="search">Search</string>
    <string name="list_room_search">List Room:</string>
    <string name="dolar">$</string>
</resources>
